<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="30dp"
    app:cardElevation="10dp"
    app:cardPreventCornerOverlap="true"
    android:padding="32dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TablaIMC_Fragment" >

    <TextView
        android:id="@+id/tvTablaIMC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alata"
        android:text="@string/tvTablaIMC"
        android:textColor="@color/green_layout"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvColor_Delg_Sev"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/color_delg_sev"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTablaIMC" />

    <TextView
        android:id="@+id/tvDelg_Sev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/alata"
        android:text="@string/tvDelg_severa"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvColor_Delg_Sev"
        app:layout_constraintTop_toBottomOf="@+id/tvTablaIMC" />

    <TextView
        android:id="@+id/tvColor_Delg_Mod"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/color_delg_mod"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvColor_Delg_Sev" />

    <TextView
        android:id="@+id/tvColor_Delg_Leve"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/color_delg_leve"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvColor_Delg_Mod" />

    <TextView
        android:id="@+id/tvColor_Peso_Normal"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/color_peso_normal"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvColor_Delg_Leve" />

    <TextView
        android:id="@+id/tvColor_Preob"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/color_preob"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvColor_Peso_Normal" />

    <TextView
        android:id="@+id/tvColor_Ob_Leve"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/color_ob_leve"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvColor_Preob" />

    <TextView
        android:id="@+id/tvColor_Ob_Med"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/color_ob_med"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvColor_Ob_Leve" />

    <TextView
        android:id="@+id/tvColor_Ob_Morb"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/color_ob_morb"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvColor_Ob_Med" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/alata"
        android:text="@string/tvDelg_Mod"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvColor_Delg_Mod"
        app:layout_constraintTop_toBottomOf="@+id/tvDelg_Sev" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/alata"
        android:text="@string/tvDelg_Leve"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvColor_Delg_Mod"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/alata"
        android:text="@string/tvPeso_Normal"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvColor_Peso_Normal"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/alata"
        android:text="@string/tvPreOb"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvColor_Preob"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/alata"
        android:text="@string/tvOb_Leve"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvColor_Ob_Leve"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/alata"
        android:text="@string/tvOb_Med"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvColor_Ob_Med"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/alata"
        android:text="@string/tvOb_morb"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvColor_Ob_Morb"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />


</androidx.constraintlayout.widget.ConstraintLayout>