<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".imc_Fragment">

    <SeekBar
        android:id="@+id/sBarAltura"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:max="200"
        android:min="100"
        android:progress="150"
        app:layout_constraintEnd_toStartOf="@+id/tv150_200"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvAltura"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAltura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/alata"
        android:text="@string/tvAltura"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/sBarAltura"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv150_200"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/alata"
        android:text="@string/tv150_200"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sBarAltura"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/alata"
        android:text="@string/tvPeso"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/sBarPeso"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAltura" />

    <TextView
        android:id="@+id/tv75_150"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/alata"
        android:text="@string/tv75_150"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sBarPeso"
        app:layout_constraintTop_toBottomOf="@+id/tv150_200" />

    <SeekBar
        android:id="@+id/sBarPeso"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:max="150"
        android:min="0"
        android:progress="75"
        app:layout_constraintEnd_toStartOf="@+id/tv75_150"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvPeso"
        app:layout_constraintTop_toBottomOf="@+id/sBarAltura" />

    <ImageView
        android:id="@+id/imIMC"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imc" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alata"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imIMC" />
</androidx.constraintlayout.widget.ConstraintLayout>